5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1880_1640.log
== TEST (2019-07-03 14:15:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(vet):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range(vet):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:15:36) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range(vet):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:15:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range(size(vet)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:17:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range(size(impar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:17:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range(size(nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:18:17) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:18:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:18:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- EXECUTION TIME:
1.46456
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
7
[ 2  3  4  5  7  9 10]
---- user output:
7
[0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
4
[2 3 5 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:18:24) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:18:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[0] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:32:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:33:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = x[i] + vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:33:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x = x[i] + vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:35:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0
x = zeros(nimpar, dtype=int)
for i in range(size(vet)):
	for j in range(nimpar):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1
	
	x = x[i] + vet[i]
print(nimpar)
print(x)
	
-- ERROR:
File "XXXX", line 8
    if vet[i]%2 == 1:
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:35:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0
x = zeros(nimpar, dtype=int)
for i in range(size(vet)):
	for j in range(nimpar):
		if vet[i]%2 == 1:
			nimpar = nimpar + 1
	
	x = x[i] + vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:35:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0
x = zeros(nimpar, dtype=int)
for i in range(size(vet)):
	for j in range(nimpar):
		if vet[i]%2 == 1:
			nimpar = nimpar + 1
	
	x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:36:28) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 == 1:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 == 1:
		x[i] = x[i] + vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:22) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1

x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 != 0:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:42:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
print(nimpar)
x = zeros(nimpar, dtype=int)
for j in range((nimpar)):
	if vet[i]%2 != 0:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:43:30) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
for j in range(size(vet)):
	if vet[i]%2 != 0:
		x[i] = vet[i]
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:46:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
for j in range(size(vet)):
	if vet[i]%2 != 0:
		x[i] = vet[i]
	else:
		vet[i] = vet[i] + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:47:11) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
for j in range(size(nimpar)):
	if vet[i]%2 != 0:
		x[i] = vet[i]
	else:
		vet[i] = vet[i] + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:53:06) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
z = 0
while(z < size(vet)):
	if vet[i]%2 != 0:
		x[z] = z
	i = i + 1

print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in ragen(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = z
	z= z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:55:40) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = z
	z= z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:56:08) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = z
	z= z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:57:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = z
	z= z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:57:27) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = z
		z = z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:59:37) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		x[j] = vet[j]
	z = z + 1
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:03:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		y = vet[j]
		x[i] = z
	z = z + 1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:12:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
z = 0
while(z < size(vet)):
	if vet[i]%2 != 0:
		x[z] = vet[z]
	z = z +1

	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:12:45) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
z = 0
while(z < size(vet)):
	if vet[z]%2 != 0:
		x[z] = vet[z]
	z = z +1

	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:13:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		y = vet[j]
		x[i] = z
	z = z + 1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:13:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		y = vet[j]
		x[j] = z
	z = z + 1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:14:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		y = vet[j]
		x[j] = z
	z = z + 1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:16:28) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
for j in range(size(vet)):
	z = 0
	if vet[j]%2 != 0:
		y = vet[j]
		x[j] = z
	z = z + 1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:19:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
i=0
for j in range(size(vet)):
	if vet[j]%2 != 0:
		y = vet[j]
		x[i] = y
		i=i+1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:19:42) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
i=0
for j in range(size(vet)):
	if vet[j]%2 != 0:
		x[i] = j
		i=i+1
	
print(nimpar)
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:19:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Insira um vetor: ")))

nimpar = 0

for i in range(size(vet)):
	if vet[i]%2 != 0:
		nimpar = nimpar + 1
#print(nimpar)
x = zeros(nimpar, dtype=int)
#z = 0
#while(z < size(vet)):
#	if vet[i]%2 != 0:
#		x[z] = vet[z]
#	i = i +1
i=0
for j in range(size(vet)):
	if vet[j]%2 != 0:
		x[i] = j
		i=i+1
	
print(nimpar)
print(x)
	
-- EXECUTION TIME:
0.823497
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
7
[ 2  3  4  5  7  9 10]
---- user output:
7
[ 2  3  4  5  7  9 10]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
4
[2 3 5 6]
---- user output:
4
[2 3 5 6]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
